--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,6 +36,25 @@
 <meta name="naver-site-verification" content="{{ site.Params.analytics.naver.SiteVerificationTag }}">
 {{- end }}
 
+<!-- Primary Meta Tags -->
+<title>Les actus de Bob</title>
+<meta name="title" content="Les actus de Bob">
+<meta name="description" content="Tout a commencé un jour où j’ai partagé des funfacts sur les vers de terre avec mes amis sur Discord, et cela a suscité un tel engouement que j’ai décidé d’écrire un article par jour sur des sujets aléatoires. Ici, vous trouverez une collection croissante de mes actus.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="Les actus de Bob">
+<meta property="og:description" content="Tout a commencé un jour où j’ai partagé des funfacts sur les vers de terre avec mes amis sur Discord, et cela a suscité un tel engouement que j’ai décidé d’écrire un article par jour sur des sujets aléatoires. Ici, vous trouverez une collection croissante de mes actus.">
+<meta property="og:image" content="/img/preview.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="Les actus de Bob">
+<meta property="twitter:description" content="Tout a commencé un jour où j’ai partagé des funfacts sur les vers de terre avec mes amis sur Discord, et cela a suscité un tel engouement que j’ai décidé d’écrire un article par jour sur des sujets aléatoires. Ici, vous trouverez une collection croissante de mes actus.">
+<meta property="twitter:image" content="/img/preview.png">
+
 {{- /* Styles */}}
 
 {{- /* includes */}}
