--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -140,6 +140,7 @@
 
 {{- /* Analytics */}}
 <script data-host="https://cdn.micrometrics.es" data-dnt="false" src="https://cdn.micrometrics.es/js/script.js" id="ZwSg9rf6GA" async defer></script>
+<script async src="https://analytics.matheo-galuba.com/script.js" data-website-id="98580a53-7c7e-4c89-b095-eea29b0231f1"></script>
 
 {{- /* Misc */}}
 {{- partial "extend_head.html" . -}}
